--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,5 @@ body {
   font-family: "Lexend Deca", sans-serif;
   font-family: "Poppins", sans-serif;
   background: #343543;
+  padding-bottom: 3rem;
 }
