--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,15 +2,20 @@
   cursor: pointer;
 }
 .logo img {
-  width: 3rem;
+  width: 6rem;
   margin: 1rem;
-  filter: invert(100%);
-  height: 3rem;
+  margin-left: -0.5rem;
+  margin-right: -0.6rem;
+  /* filter: invert(100%); */
+  height: 6rem;
 }
-.logo--text h1 {
+.logo--text h1,
+.logo--text {
   color: #fff;
   font-family: "Lexend Deca", sans-serif;
+  text-decoration: none;
   font-size: 1.8rem;
+  margin-top: -0.2rem;
 }
 .header--container {
   background-color: var(--hero-bg);
@@ -38,9 +43,9 @@
 /* media queries */
 @media screen and (max-width: 570px) {
   .logo img {
-    width: 1.5rem;
-    height: 1.5rem;
-    margin-left: -0.3rem;
+    width: 4.5rem;
+    height: 4.5rem;
+    margin-left: -0.9rem;
   }
   .logo--text h1 {
     font-size: 1rem;
