--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 *,
 ::after,
 ::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 body {
-  font-family: "Lexend Deca", sans-serif;
-  font-family: "Poppins", sans-serif;
-  background: #343543;
-  padding-bottom: 3rem;
+	font-family: 'Lexend Deca', sans-serif;
+	font-family: 'Poppins', sans-serif;
+	background: #343543;
+	/* padding-bottom: 3rem; */
 }
