--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,54 +1,54 @@
 .logo {
-  cursor: pointer;
+	cursor: pointer;
 }
 .logo img {
-  width: 6rem;
-  margin: 1rem;
-  margin-left: -0.5rem;
-  margin-right: -0.6rem;
-  /* filter: invert(100%); */
-  height: 6rem;
+	width: 4rem;
+	/* margin: 1rem; */
+	/* margin-left: -0.5rem; */
+	/* margin-right: -0.6rem; */
+	/* filter: invert(100%); */
+	/* height: 5rem; */
 }
 .logo--text h1,
 .logo--text {
-  color: #fff;
-  font-family: "Lexend Deca", sans-serif;
-  text-decoration: none;
-  font-size: 1.8rem;
-  margin-top: -0.2rem;
+	color: #fff;
+	font-family: 'Lexend Deca', sans-serif;
+	text-decoration: none;
+	font-size: 1.8rem;
+	margin-top: -0.2rem;
 }
 .header--container {
-  background-color: var(--hero-bg);
-  width: 100%;
-  background-color: #343541;
-  height: 80px;
+	background-color: var(--hero-bg);
+	width: 100%;
+	background-color: #343541;
+	height: 80px;
 }
 .header--content {
-  display: flex;
-  align-items: center;
-  padding: 0 2rem;
-  justify-content: space-between;
+	display: flex;
+	align-items: center;
+	padding: 0 2rem;
+	justify-content: space-between;
 }
 
 .header--left {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	align-items: center;
 }
 .user {
-  color: #fff;
-  font-size: 1.4rem;
+	color: #fff;
+	font-size: 1.4rem;
 }
 /* media queries */
 @media screen and (max-width: 570px) {
-  .logo img {
-    width: 4.5rem;
-    height: 4.5rem;
-    margin-left: -0.9rem;
-  }
-  .logo--text h1 {
-    font-size: 1rem;
-    margin-top: -0.5rem;
-  }
+	.logo img {
+		width: 4.5rem;
+		height: 4.5rem;
+		margin-left: -0.9rem;
+	}
+	.logo--text h1 {
+		font-size: 1rem;
+		margin-top: -0.5rem;
+	}
 }
