--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-body {
+/* body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-}
+} */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
