--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,67 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.gradient-border-btn {
+	@apply relative overflow-hidden border-2 border-transparent;
+
+	animation: gradient-border-animation 4s infinite;
+}
+
+@keyframes gradient-border-animation {
+	0% {
+		border-image-slice: 1;
+		border-image-source: linear-gradient(45deg, #ff8a00, #e52e71);
+	}
+	25% {
+		border-image-slice: 1;
+		border-image-source: linear-gradient(45deg, #3494e6, #ec6ead);
+	}
+	50% {
+		border-image-slice: 1;
+		border-image-source: linear-gradient(45deg, #f12711, #f5af19);
+	}
+	75% {
+		border-image-slice: 1;
+		border-image-source: linear-gradient(45deg, #00b4db, #0083b0);
+	}
+	100% {
+		border-image-slice: 1;
+		border-image-source: linear-gradient(45deg, #fc4a1a, #f7b733);
+	}
+}
+.gradient-text {
+	background-clip: text;
+	color: transparent;
+	background-image: linear-gradient(
+		45deg,
+		#3494e6,
+		#ec6ead,
+		#f12711,
+		#f5af19,
+		#0083b0,
+		#fc4a1a
+	);
+	background-size: 200% 200%;
+	animation: gradient-text-animation 5s infinite;
+}
+
+@keyframes gradient-text-animation {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+.progress-bar {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 10px;
+	background: #fe0222;
+	transform-origin: 0%;
+}
