--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,6 @@ body {
 	font-family: 'Lexend Deca', sans-serif;
 	font-family: 'Poppins', sans-serif;
 	background: #343543;
-	height: 100vh;
+	height: 100%;
 	/* padding-bottom: 3rem; */
 }
