--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+html {
+	height: 100vh;
+}
 body {
 	font-family: 'Lexend Deca', sans-serif;
 	font-family: 'Poppins', sans-serif;
